--- a/app/src/main/res/layout/fragment_add_bills.xml
+++ b/app/src/main/res/layout/fragment_add_bills.xml
@@ -10,7 +10,7 @@
         android:id="@+id/addText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/roboto_bold"
         android:text="Add Bill"
         android:textColor="@color/white"
@@ -37,7 +37,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="20dp"
         android:layout_marginRight="16dp"
         app:boxCornerRadiusBottomEnd="10dp"
         app:boxCornerRadiusBottomStart="10dp"
@@ -66,7 +66,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="20dp"
         android:layout_marginRight="16dp"
         app:boxCornerRadiusBottomEnd="10dp"
         app:boxCornerRadiusBottomStart="10dp"
@@ -94,29 +94,30 @@
         android:id="@+id/tvFrequency"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="20dp"
         android:text="Bill Frequency"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/amountInputLayout"></TextView>
 
     <Spinner
         android:id="@+id/spFrequency"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
+        android:layout_width="250dp"
+        android:layout_height="57dp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintBottom_toBottomOf="@+id/tvFrequency"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.951"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/tvFrequency"
-        app:layout_constraintTop_toTopOf="@+id/tvFrequency"></Spinner>
+        app:layout_constraintTop_toTopOf="@+id/tvFrequency"
+        app:layout_constraintVertical_bias="0.526"></Spinner>
 
     <TextView
         android:id="@+id/tvDuedate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="40dp"
         android:text="Due Date"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvFrequency">
@@ -125,33 +126,17 @@
 
     <Spinner
         android:id="@+id/spDateInput"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:dropDownHeight="wrap_content"
-        android:hint="Bill Frequency"
-        android:inputType="none"
+        android:layout_width="250dp"
+        android:layout_height="57dp"
+        android:layout_marginEnd="16dp"
+        android:hint="Due Date"
         app:layout_constraintBottom_toBottomOf="@+id/tvDuedate"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.92"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/tvDuedate"
         app:layout_constraintTop_toTopOf="@+id/tvDuedate"
-        app:layout_constraintVertical_bias="0.71"></Spinner>
+        app:layout_constraintVertical_bias="0.526" />
 
-    <DatePicker
-        android:id="@+id/dpduedate"
-        android:layout_width="250dp"
-        android:layout_height="380dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="10dp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@id/tvDuedate"
-        app:layout_constraintTop_toBottomOf="@id/addBill_button"
-        app:layout_constraintVertical_bias="0.815" />
 
     <ProgressBar
         android:id="@+id/progressBar3"
@@ -170,9 +155,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="150dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="112dp"
         android:paddingTop="15dp"
         android:paddingBottom="15dp"
         android:text="Save Bill"
@@ -181,7 +165,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dueDateInputLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/spDateInput"
+        app:layout_constraintVertical_bias="0.914" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
